<resources>
    <string name="app_name">8号养车</string>
    <string name="text_cancel">取消</string>
    <string name="text_save">保存</string>
    <string name="text_price_prefix">￥%s</string>
    <string name="splash_des">开启汽车服务新体验</string>
    <string name="text_launch_entry">立即体验</string>
    <string name="login_login">登录</string>
    <string name="login_account">请输入手机号</string>
    <string name="login_name">请输入姓名</string>
    <string name="login_password">请输入密码</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_register">新用户注册</string>
    <string name="login_term1">阅读并同意</string>
    <string name="login_term2">《8号养车用户协议》</string>
    <string name="register_welcome">您好，</string>
    <string name="register_welcome2">欢迎来到8号养车！</string>
    <string name="login_user_term">用户协议</string>
    <string name="login_user_term_deny">不同意</string>
    <string name="login_user_term_agree">同意并继续</string>
    <string name="login_user_term_title">用户协议</string>
    <string name="login_guest">随便看看</string>
    <string name="login_reset_password">重置密码</string>
    <string name="login_input_auth">请输入验证码</string>
    <string name="login_request_auth_number">获取验证码</string>
    <string name="login_input_new_password">请输入新密码</string>
    <string name="login_confirm_password">请确认新密码</string>
    <string name="login_save">保存</string>
    <string name="login_btn_register">注册</string>
    <string name="login_reset_hint">请重置你的密码</string>
    <string name="text_main">首页</string>
    <string name="text_main_title">汽车维修</string>
    <string name="text_search_des">搜索维修、保养地点等等</string>
    <string name="text_shop_classify">商品分类</string>
    <string name="text_main_more">详情</string>
    <string name="text_main_phone">电话</string>
    <string name="text_main_contract">联系店家</string>
    <string name="text_main_book">预约服务</string>
    <string name="text_main_garage_location">距你%s公里  %s</string>
    <string name="text_main_garage_des">汽车维修</string>
    <string name="text_main_ok">确认</string>
    <string name="text_search_contant">联系人：</string>
    <string name="text_search_distance">距您%s公里</string>
    <string name="text_search_cancel">取消</string>
    <string name="text_search_band">服务推荐</string>
    <string name="text_search_near">距离最近</string>
    <string name="text_search_high">人气最高</string>
    <string name="text_client">客户</string>
    <string name="text_mine">我的</string>
    <string name="text_my_order">我的订单</string>
    <string name="text_my_order_all">全部</string>
    <string name="text_my_order_wait_pay">待付款</string>
    <string name="text_my_order_wait_service">待服务</string>
    <string name="text_my_order_wait_rate">待评价</string>
    <string name="text_my_order_time">预约时间：</string>
    <string name="text_my_order_money">订单金额：</string>
    <string name="text_my_order_state1">未支付</string>
    <string name="text_my_order_state2">等待服务</string>
    <string name="text_my_order_state3">完成服务</string>
    <string name="text_my_order_state4">服务中</string>
    <string name="text_order_detail">订单详情</string>
    <string name="text_destination_address">收货地址</string>
    <string name="text_order_info">订单信息</string>
    <string name="text_product_price">商品总价</string>
    <string name="text_order_price">订单总价</string>
    <string name="text_final_price">实付款</string>
    <string name="text_order_detail_code">车辆号码：</string>
    <string name="text_order_detail_type">车辆型号：</string>
    <string name="text_order_detail_time">预约时间：</string>
    <string name="text_order_detail_item">服务项目：</string>
    <string name="text_order_detail_material">项目材料：</string>
    <string name="text_order_detail_exid">交易单号：</string>
    <string name="text_order_detail_oid">订单单号：</string>
    <string name="text_order_detail_price">订单金额</string>
    <string name="text_order_detail_part">拆卸零件</string>
    <string name="text_order_detail_process">维修过程</string>
    <string name="text_order_detail_fee">费用明细</string>
    <string name="text_order_detail_modify">修改</string>
    <string name="text_order_detail_pic">照片信息</string>
    <string name="text_order_type">订单类型：</string>
    <string name="text_order_detail_list">维修清单</string>
    <string name="text_order_detail_list_modify">修改</string>
    <string name="text_order_detail_list_ok">确认</string>
    <string name="text_order_detail_list_finish">完成</string>
    <string name="text_all_order">商城订单</string>
    <string name="text_allorder_all">全部</string>
    <string name="text_allorder_wait_pay">待付款</string>
    <string name="text_allorder_wait_send">待发货</string>
    <string name="text_allorder_wait_reach">待收货</string>
    <string name="text_allorder_wait_rate">待评价</string>
    <string name="text_allorder_wait_service">待服务</string>
    <string name="btn_delete_order">取消订单</string>
    <string name="btn_order_rate">评价</string>
    <string name="btn_order_pay">去付款</string>
    <string name="btn_order_detail">详情</string>
    <string name="text_add_car">添加车辆</string>
    <string name="text_car_mile">请输入里程</string>
    <string name="text_car_pic">车辆照片</string>
    <string name="text_car_plate">请输入车牌号码</string>
    <string name="text_car_plate2">车牌号码</string>
    <string name="text_car_engine">请输入发动机号</string>
    <string name="text_car_engine2">发动机号</string>
    <string name="text_car_frame">请输入车架号码</string>
    <string name="text_car_frame2">车架号码</string>
    <string name="text_car_plate_type">号牌类型</string>
    <string name="text_car_address">车辆地址</string>
    <string name="text_buy_car_time">请选择购车时间</string>
    <string name="text_brand">品牌型号</string>
    <string name="hint_set_default_car">设为默认车辆</string>
    <string name="text_send_car_address">送车地址</string>
    <string name="text_client_name">姓名</string>
    <string name="text_client_phone">电话</string>
    <string name="text_client_address">地址</string>
    <string name="text_client_save">保存</string>
    <string name="text_add_address">添加地址</string>
    <string name="hint_receiver_name">请输入收货人姓名</string>
    <string name="hint_receiver_phone">请输入收货人联系电话</string>
    <string name="hint_receiver_city">请选择省市区</string>
    <string name="hint_receiver_address">请输入详细地址</string>
    <string name="hint_set_default_address">设为默认地址</string>
    <string name="text_send_car_service">送车服务</string>
    <string name="text_car_receiver">收车人: %s</string>
    <string name="text_car_receive_time">收车时间: %s</string>
    <string name="text_car_receive_plate">品牌: %s</string>
    <string name="btn_car_receive_confirm">完成</string>
    <string name="text_remaining_sum">余额</string>
    <string name="text_my_small_change">我的零钱</string>
    <string name="text_recharge">充值</string>
    <string name="text_recharge_record">充值记录</string>
    <string name="text_remaining_sum_list">余额列表</string>
    <string name="text_exchange_wechat">微信支付</string>
    <string name="text_order_page">确认订单</string>
    <string name="btn_add_receive_address">添加收货信息</string>
    <string name="text_submit_order">提交订单</string>
    <string name="text_order_count">共%s件商品  小计：</string>
    <string name="text_point_discount">积分减免：</string>
    <string name="text_point_des">积分: 当前积分%s分  满1000可用</string>
    <string name="text_point_rule">积分使用规则</string>
    <string name="text_point_condition">使用条件</string>
    <string name="text_point_condition1">1.订单金额大于20元（含）\n2.积分大于1000分（含）\n3.积分兑换不得超过每笔订单应付金额的50%</string>
    <string name="text_point_use">使用规则</string>
    <string name="text_point_use1">1.使用的积分分值为1000的整倍数\n2.1000积分抵10元</string>
    <string name="text_user_center">个人</string>
    <string name="text_user_center_score">积分: %s</string>
    <string name="text_user_center_wait_serivce">待服务</string>
    <string name="text_user_center_wait_rate">待评价</string>
    <string name="text_user_center_my_garage">我的车库</string>
    <string name="text_user_center_shop_credit">商城订单</string>
    <string name="text_user_center_door_serivce">上门维修服务</string>
    <string name="text_user_center_address">收货地址</string>
    <string name="text_user_center_aftersale_record">售后服务</string>
    <string name="text_user_center_service_phone">客服</string>
    <string name="text_user_center_user_name">用户名</string>
    <string name="text_consumer_hotline">020-87618887</string>
    <string name="text_shopping_car">购物车</string>
    <string name="text_select_all">全选</string>
    <string name="text_go_pay">结算</string>
    <string name="text_total_money">总计：</string>
    <string name="text_sc_amount">&#160;&#160;%s&#160;&#160;</string>
    <string name="text_sc_delete">删除</string>
    <string name="text_sc_increace">+</string>
    <string name="text_sc_reduce">-</string>
    <string name="text_shop">商城</string>
    <string name="text_shop_sort">分类筛选</string>
    <string name="text_shop_unlimit">不限</string>
    <string name="text_shop_price">价格</string>
    <string name="text_shop_sale">销量</string>
    <string name="text_shop_type">分类</string>
    <string name="text_shop_item_price">价格:</string>
    <string name="text_repair">预约维修</string>
    <string name="text_repair_hint">请输入你需要维修的项目</string>
    <string name="text_repair_delete">长按可删除图片</string>
    <string name="text_repair_mile">行驶里程 %s km</string>
    <string name="text_repair_contact">联系人:</string>
    <string name="text_repair_contact_hint">请输入联系人名称</string>
    <string name="text_repair_phone">联系电话:</string>
    <string name="text_repair_phone_hint">请输入联系电话</string>
    <string name="text_repair_model">车型:</string>
    <string name="text_repair_location">位置:</string>
    <string name="text_repair_time">时间:</string>
    <string name="text_repair_publish">立即发布</string>
    <string name="text_repair_add_pic">请添加项目图片（最多3张）</string>
    <string name="text_maintain">预约保养</string>
    <string name="text_chose_gas">选择机油</string>
    <string name="text_gas_amount">机油用量：</string>
    <string name="text_market_price">价格：</string>
    <string name="text_time_price">工时费：</string>
    <string name="text_filter">专用机油格：</string>
    <string name="text_select_car">请选择汽车</string>
    <string name="text_my_car">我的汽车</string>
    <string name="text_my_car_list">我的车库</string>
    <string name="text_my_car_frame">车架号码：</string>
    <string name="text_my_car_default">默认</string>
    <string name="text_my_car_add">添加</string>
    <string name="text_my_car_miles">已行驶%skm</string>
    <string name="text_my_address">我的地址</string>
    <string name="text_add_info">添加收货信息</string>
    <string name="text_address_list">收货地址列表</string>
    <string name="text_address_delete">删除</string>
    <string name="text_address_edit">编辑</string>
    <string name="text_address_default">默认地址</string>
    <string name="text_repaire_record">维修记录</string>
    <string name="text_repaire_record_doing">未完成的维修</string>
    <string name="text_repaire_record_finish">已完成的维修</string>
    <string name="text_repaire_record_cancel">已取消</string>
    <string name="text_repaire_record_plate">车辆号码:</string>
    <string name="text_repaire_record_model">车辆型号:</string>
    <string name="text_repaire_record_time">预约时间:</string>
    <string name="text_repaire_record_get_time">取车时间:</string>
    <string name="text_repaire_record_brand">品牌:</string>
    <string name="text_repaire_record_money">费用:</string>
    <string name="text_repaire_record_send_car">送车上门:</string>
    <string name="text_repaire_record_item_pay">付款</string>
    <string name="text_repaire_record_item_cancel">取消</string>
    <string name="text_repaire_record_not_get_car">未取车</string>
    <string name="text_station_name">新领域汽车维修公司</string>
    <string name="text_service">服务</string>
    <string name="text_annual_check">年检</string>
    <string name="text_check_brand">品牌型号：</string>
    <string name="text_check_code">号码号牌：</string>
    <string name="text_check_book_time">预约时间：</string>
    <string name="text_check_ok_time">完成时间：</string>
    <string name="text_check_car_type">车辆类型：</string>
    <string name="text_check_check_type">年检类型：</string>
    <string name="text_check_station">年检站点：</string>
    <string name="text_check_oid">订单单号：</string>
</resources>