<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_cycrect_white_fill"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/lp_tv_point_rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_point_rule"
        android:textColor="@color/color_uc_text"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/lp_iv_close"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/lp_tv_point_rule"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lp_tv_point_rule"
        app:srcCompat="@drawable/order_close" />

    <TextView
        android:id="@+id/lp_tv_point_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_point_condition"
        android:textColor="@color/color_uc_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lp_tv_point_rule" />

    <TextView
        android:id="@+id/lp_tv_point_condition2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_point_condition1"
        android:textColor="@color/color_sub_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lp_tv_point_condition"
        app:layout_constraintTop_toBottomOf="@+id/lp_tv_point_condition" />

    <TextView
        android:id="@+id/lp_tv_point_use"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_point_use"
        android:textColor="@color/color_uc_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lp_tv_point_condition"
        app:layout_constraintTop_toBottomOf="@+id/lp_tv_point_condition2" />

    <TextView
        android:id="@+id/lp_tv_point_use2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_point_use1"
        android:textColor="@color/color_sub_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lp_tv_point_condition"
        app:layout_constraintTop_toBottomOf="@+id/lp_tv_point_use" />
</android.support.constraint.ConstraintLayout>
