<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_sub_background"
    tools:context=".activies.order.AllOrderActivity">

    <include
        android:id="@+id/include"
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/mo_guideling1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <RadioGroup
        android:id="@+id/mo_radio_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/mo_guideling1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include">

        <RadioButton
            android:id="@+id/mo_rb_all"
            style="@style/CustomRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/text_my_order_all" />

        <RadioButton
            android:id="@+id/mo_rb_wait_pay"
            style="@style/CustomRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_my_order_wait_pay" />

        <RadioButton
            android:id="@+id/mo_rb_wait_service"
            style="@style/CustomRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_my_order_wait_service" />

        <RadioButton
            android:id="@+id/mo_rb_wait_rate"
            style="@style/CustomRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_my_order_wait_rate" />

    </RadioGroup>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/mo_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/mo_guideling1" />


</android.support.constraint.ConstraintLayout>