<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/main_fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:name="com.littleant.carrepair.fragment.MainFragment"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/mainBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/main_main_selector"
            android:gravity="center_horizontal"
            android:paddingTop="4dp"
            android:text="@string/text_main"
            android:textColor="@drawable/rb_text_color_selector" />

        <RadioButton
            android:id="@+id/shopBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:button="@null"
            android:gravity="center_horizontal"
            android:textColor="@drawable/rb_text_color_selector"
            android:layout_weight="1"
            android:drawableTop="@drawable/main_check_selector"
            android:background="@null"
            android:text="@string/text_annual_check" />

        <RadioButton
            android:id="@+id/clientBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:button="@null"
            android:gravity="center_horizontal"
            android:textColor="@drawable/rb_text_color_selector"
            android:layout_weight="1"
            android:drawableTop="@drawable/main_service_selector"
            android:background="@null"
            android:text="@string/text_service" />

        <RadioButton
            android:id="@+id/mineBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:button="@null"
            android:gravity="center_horizontal"
            android:textColor="@drawable/rb_text_color_selector"
            android:layout_weight="1"
            android:drawableTop="@drawable/main_uc_selector"
            android:background="@null"
            android:text="@string/text_user_center" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>
