<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activies.AllOrderActivity">

    <include
        android:id="@+id/include"
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/ao_guideling1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/ao_guideling1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include">

        <RadioButton
            android:id="@+id/btn_all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_allorder_all"
            android:checked="true"
            style="@style/CustomRadioButton"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/btn_wait_pay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_allorder_wait_pay"
            style="@style/CustomRadioButton"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/btn_wait_send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_allorder_wait_send"
            style="@style/CustomRadioButton"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/btn_wait_reach"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_allorder_wait_reach"
            style="@style/CustomRadioButton"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/btn_finish"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_allorder_finish"
            style="@style/CustomRadioButton"
            android:layout_weight="1"/>

    </RadioGroup>

    <include
        layout="@layout/layout_product_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ao_guideling1" />


</android.support.constraint.ConstraintLayout>